modified:   Cargo.toml 	modified:   src/camera.rs 	modified:   src/editor.rs 	deleted:    src/filesystem/spawn.rs 	modified:   src/gui/left_panel.rs 	modified:   src/gui/mod.rs 	modified:   src/gui/my_state.rs 	modified:   src/gui/right_panel.rs 	modified:   src/lib.rs 	new file:   src/objects/collider/mod.rs 	new file:   src/objects/gltf.rs 	renamed:    src/filesystem/mod.rs -> src/objects/mod.rs 	renamed:    src/filesystem/ron/loader.rs -> src/objects/ron/loader.rs 	renamed:    src/filesystem/ron/mod.rs -> src/objects/ron/mod.rs 	renamed:    src/filesystem/ron/sawer.rs -> src/objects/ron/sawer.rs 	renamed:    src/filesystem/ron/spawn.rs -> src/objects/ron/spawn.rs 	new file:   src/objects/spawn.rs 	modified:   src/picking.rs 	modified:   src/render/mod.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ bevy_common_assets = { version = "0.6.0", features = ["ron", "toml"] }
 bevy_asset_loader = { version = "0.16.0"}
 ron = { version = "0.8.0" }
 #bevy_transform_gizmo = { version = "0.6.0" }
-bevy_transform_gizmo = { git = "https://github.com/woodroww/my_bevy_transform_gizmo.git" }
-bevy_mod_picking = { version = "0.12.0" }
+bevy_transform_gizmo = { git = "https://github.com/KnstAnt/bevy_transform_gizmo" }
+bevy_mod_picking = { version = "0.13.0", features = [ "backend_egui", "backend_rapier", "backend_raycast" ] }
 #bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git", branch = "beta" }
 bevy_mod_raycast = { version = "0.8.0" }
 bevy_egui = { version = "0.20.0" }
