--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT or Apache-2.0"
 [profile.dev]
 overflow-checks = true
 debug-assertions = true
-debug = true
+#debug = true
 codegen-units = 16
 lto = false
 incremental = true
